--- a/LojaVirtual/LojaVirtual.csproj
+++ b/LojaVirtual/LojaVirtual.csproj
@@ -7,6 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Repositories\ILojaRepository" />
+    <None Remove="Repositories\LojaRepository" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="Repositories\ILojaRepository" />
+    <Compile Include="Repositories\LojaRepository" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.13" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.26.0" />
